# sigmadsp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  _typos.toml  build_schemas.sh  common_functions.sh  install.sh  pyproject.toml  run.py  setup.cfg  setup.py  sigma_studio_dump.pkl  sigma_studio_raw_dump.pkl  uninstall.sh  versioneer.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: install.yml  pytest.yml  python-publish.yml
app/: dump_sigma_studio_data.py
schemas/: control.proto
sigma-dsp/: application.py  tcp_server.py
sigma-dsp/communication/: tcp_server.py
sigma-dsp/hardware/: adau14xx.py  spi.py
sigmadsp/: __init__.py  application.py  backend.py  frontend.py  setup.py
sigmadsp/application/: __init__.py  backend.py  frontend.py
sigmadsp/communication/: base.py  sigma_tcp_server.py  sigmastudio_protocols.py  tcp_server.py  tcpip1701.py  tcpipadau145x.py
sigmadsp/dsp/: __init__.py  adau14xx.py  adau1x01.py  adau1x0x.py  common.py  factory.py
sigmadsp/hardware/: __init__.py  adau14xx.py  adau1701.py  base.py  base_protocol.py  dsp.py  i2c.py  spi.py
sigmadsp/helper/: conversion.py  parser.py  settings.py
sigmadsp/protocols/: __init__.py  common.py  i2c.py  spi.py
sigmadsp/sigmastudio/: __init__.py  adau14xx.py  adau1x01.py  common.py  header.py  server.py
src/sigmadsp/: __init__.py  _version.py  application.py  backend.py
src/sigmadsp/application/: backend.py  frontend.py
src/sigmadsp/communication/: sigma_tcp_server.py
src/sigmadsp/hardware/: adau14xx.py  dsp.py  spi.py
src/sigmadsp/helper/: __init__.py  conversion.py  parser.py  settings.py
templates/: .env  backend.service.template  config.yaml.template
tests/: __init__.py  test_parameter_file.params  test_parser.py
tests/application/: test_backend.py  test_config.yaml
tests/communication/: test_protocols.py  test_sigma_tcp_server.py
tests/dsp/: test_adau14xx.py
tests/helper/: test_conversion.py  test_parser.py
tests/mock/: __init__.py  dummy_protocol.py  sigma_studio.py
tests/protocols/: dummy.py
tests/sigmastudio/: dump.py  test_headers.py  test_sigma_tcp_server.py
