[tool.poetry]
name = "sigmadsp"
license = "GPL-3.0-or-later"
version = "0.0.0"
description = "A package for controlling Analog Devices Sigma DSP chipsets."
readme = "README.md"
authors = ["Adrian Figueroa <elagil@takanome.de>"]
repository = "https://github.com/elagil/sigmadsp"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
sigmadsp-backend = "sigmadsp.backend:main"
sigmadsp = "sigmadsp.frontend:sigmadsp"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
spidev = "^3.5"
retry = "^0.9.2"
smbus2 = "^0.4.1"
gpiozero = "^1.6.2"
protobuf = "^3.20.3"
click = "^8.1.3"
grpcio = "^1.50.0"

[tool.poetry.group.dev.dependencies]
grpcio-tools = "^1.48.2"
pytest = "^7.1.2"
hypothesis = "^6.47.5"
mypy-protobuf = "^3.3.0"
debugpy = "^1.6.3"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
latest-tag = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
target-version = "py39"

select = ["E", "W", "F", "D", "UP", "N", "PL", "PTH", "SLF", "RET", "RSE", "SIM", "PT", "LOG"]
ignore = ["PLR0913"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true
