[metadata]
name = sigmadsp-elagil
version = 0.0.1
author = Adrian Figueroa
author_email = x@takanome.de
description = A package for controlling Sigma DSP devices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/elagil/sigma-dsp
project_urls =
    Bug Tracker = https://github.com/elagil/sigma-dsp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    spidev

[options.packages.find]
where = src
